@@ -1,3 +1,8 @@
+2007-02-01  Akim Demaille  <akim@lrde.epita.fr>
+
+	Fix check-hmtl.
+	* check.mk: check-TESTS _can_ fail.
+
 2007-01-30  Akim Demaille  <demaille@gostai.com>
 
 	Upgrade check.mk to produce html
